// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FoundMovies Snapshot (with movies) 1`] = `
<FoundMovies
  classes={
    Object {
      "emptyResults": "FoundMovies-emptyResults-0-1-1",
      "foundMovies": "FoundMovies-foundMovies-0-1-2",
    }
  }
  movies={
    Array [
      Object {
        "genres": Array [
          "cyberpunk",
        ],
        "title": "Robocop: Winter Soldier",
      },
      Object {
        "genres": Array [
          "dieselpunk",
        ],
        "title": "Lord of The Rings: Return of Joker",
      },
    ]
  }
  onMovieClick={[Function]}
  onSortUpdate={[Function]}
  option="release_date"
  total="Let's see what we've found:"
/>
`;

exports[`FoundMovies Snapshot (without movies) 1`] = `
<FoundMovies
  classes={
    Object {
      "emptyResults": "FoundMovies-emptyResults-0-1-1",
      "foundMovies": "FoundMovies-foundMovies-0-1-2",
    }
  }
  movies={Immutable.List []}
  onMovieClick={[Function]}
  onSortUpdate={[Function]}
  option="release_date"
  total="No films found"
/>
`;
